--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <title>My-Frist-Website</title>
 </head>
 <body>
-   <section class="flexible-container">
+    <section>
+        <nav>
+            <Strong>
+                SoHeL VaI
+            </Strong>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Skill</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </section>
+   
+   
+   
+   
+   
+    <section class="flexible-container">
         <div class="frist-web">
             <h1 class="head1">Welcome To</h1>
             <h2> <span> SoHeL's</span> Website</h2>
@@ -76,7 +94,6 @@
     <input type="Email" placeholder="Email"><br><br>
     <textarea name="comment" placeholder="Write Somthing...."></textarea><br><br>
     <input  type="submit" value="Submit" >
-    <input  type="reset" value="Reset">
 </section>
 
 </body>
